Bug 657491 - Too much space under pushes. r=arpad.borsos

--- a/css/style.css
+++ b/css/style.css
@@ -155,9 +155,6 @@ iframe {
 body.details > #container {
   bottom: 121px;
 }
-body:not(.details) > #container li:last-child {
-  margin-bottom: 121px;
-}
 #pushes, .patches, .results {
   list-style: none;
   margin: 0;
